2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharp\CSharpBindingCompilerManager.cs: On
	  windows, make sure the compiler output is written and read
	  using utf8.

2010-03-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  handled cast exception.

2010-03-24  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Formatting/DomSpacingVisitor.cs:
	* MonoDevelop.CSharp.Formatting/OnTheFlyFormatter.cs:
	* MonoDevelop.CSharp.Formatting/DomIndentationVisitor.cs:
	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Worked on new formatter.

2010-03-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/TypeMembers/AbstractMember.cs:
	* MonoDevelop.CSharp.Dom/Expressions/CastExpression.cs:
	* MonoDevelop.CSharp.Dom/Statements/ForeachStatement.cs:
	* MonoDevelop.CSharp.Dom/Expressions/QueryExpression.cs:
	* MonoDevelop.CSharp.Dom/Statements/TryCatchStatement.cs:
	* MonoDevelop.CSharp.Dom/GeneralScope/DelegateDeclaration.cs:
	* MonoDevelop.CSharp.Dom/Expressions/ObjectCreateExpression.cs:
	* MonoDevelop.CSharp.Dom/Expressions/MemberReferenceExpression.cs:
	* MonoDevelop.CSharp.Dom/Statements/VariableDeclarationStatement.cs:
	  Changed return type properties.

2010-03-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/Expressions/QueryExpression.cs:
	  Worked on LINQ expressions.

2010-03-23  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Dom/FullTypeName.cs:
	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/ICSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Dom/AbtractCSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Dom/GeneralScope/Constraint.cs:
	* MonoDevelop.CSharp.Dom/GeneralScope/TypeDeclaration.cs:
	* MonoDevelop.CSharp.Dom/TypeMembers/MethodDeclaration.cs: