@@ -1,3 +1,8 @@
+2010-04-01  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
+	  592120 - Type resolver bug with this.Property[]'.
+
 2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.CSharp\CSharpBindingCompilerManager.cs: On
